# EyeDetectioDlibC-

./: .gitignore  CMakeLists.txt  HibridMedianfilter.cpp  HibridMedianfilter.h  array.cpp  array.h  bmp.cpp  bmp.h  hybridmedianfilter.cpp  hybridmedianfilter.h  includes.h  main.cpp  system_metrics.cpp  system_metrics.h
functions/: PrintImg.h  correccion_pupila.h  double_functions.h  int_functions.h  metrics.h  nombre_etiqueta.h
normalizacion/: interp2.h  normaliseiris.h
segmentacion/: canny.h  circle_hough.h  filter2.h  hysthresh.h
